Fix isort and setup checks

--- a/tox.ini
+++ b/tox.ini
@@ -42,9 +42,11 @@ deps =
     readme-renderer
     pygments
     isort
+    twine
 skip_install = true
 commands =
     python setup.py check --strict --metadata --restructuredtext
+    ; twine check
     check-manifest {toxinidir}
     flake8 src tests setup.py
     isort --verbose --check-only --diff --recursive src tests setup.py
