--- a/MANIFEST.in
+++ b/MANIFEST.in
@@ -17,3 +17,5 @@ include README.rst
 include tox.ini .travis.yml .appveyor.yml .readthedocs.yml
 
 global-exclude *.py[cod] __pycache__/* *.so *.dylib
+exclude Makefile
+exclude todo.txt
