Add websocket transport

--- a/tox.ini
+++ b/tox.ini
@@ -31,6 +31,7 @@ usedevelop = false
 deps =
     pytest
     pytest-cov
+    pytest-asyncio
 commands =
     {posargs:pytest --cov --cov-report=term-missing -vv tests}
 
