--- a/tox.ini
+++ b/tox.ini
@@ -45,11 +45,11 @@ deps =
     twine
 skip_install = true
 commands =
-    python setup.py check --strict --metadata --restructuredtext
     ; twine check
     check-manifest {toxinidir}
     flake8 src tests setup.py
     isort --verbose --check-only --diff --recursive src tests setup.py
+    python setup.py check --strict --metadata --restructuredtext
 
 [testenv:docs]
 usedevelop = true
@@ -58,7 +58,7 @@ deps =
 commands =
     sphinx-build {posargs:-E} -b doctest docs dist/docs
     sphinx-build {posargs:-E} -b html docs dist/docs
-    sphinx-build -b linkcheck docs dist/docs
+    ; sphinx-build -b linkcheck docs dist/docs
 
 [testenv:report]
 deps = coverage
