--- a/MANIFEST.in
+++ b/MANIFEST.in
@@ -19,3 +19,5 @@ include tox.ini .travis.yml .appveyor.yml .readthedocs.yml
 global-exclude *.py[cod] __pycache__/* *.so *.dylib
 exclude Makefile
 exclude todo.txt
+recursive-include examples *.py
+
