--- a/tox.ini
+++ b/tox.ini
@@ -32,6 +32,7 @@ deps =
     pytest
     pytest-cov
     pytest-asyncio
+    ratelimit
 commands =
     {posargs:pytest --cov --cov-report=term-missing -vv tests}
 
